<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView style="@style/ResumeApp.Card">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/ResumeApp.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit_information"
                        android:textColor="@color/black" />

                    <ImageButton
                        android:id="@+id/close_edit_information_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_baseline_close_24"
                        android:backgroundTint="@color/black"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edittext_name"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/edittext_current_job"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/current_job" />

                <EditText
                    android:id="@+id/edittext_phone_number"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/phone_number" />

                <EditText
                    android:id="@+id/edittext_email"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/email" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/information_save_button"
                    style="@style/ResumeApp.Button"
                    android:backgroundTint="@color/green"
                    android:text="@string/button_save"
                    android:textColor="@color/black" />

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>