<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView style="@style/ResumeApp.Card">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/ResumeApp.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_education"
                        android:textColor="@color/black" />

                    <ImageButton
                        android:id="@+id/close_edit_education_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_baseline_close_24"
                        android:backgroundTint="@color/black"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edittext_school_name"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/school_name" />

                <EditText
                    android:id="@+id/edittext_education_description"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:gravity="top"
                    android:hint="@string/short_description"
                    android:minHeight="100dp" />

                <EditText
                    android:id="@+id/edittext_education_start_date"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/start_date" />

                <EditText
                    android:id="@+id/edittext_education_end_date"
                    style="@style/ResumeApp.Button"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_rounded_rectangle"
                    android:hint="@string/end_date" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/education_save_button"
                    style="@style/ResumeApp.Button"
                    android:backgroundTint="@color/green"
                    android:text="@string/button_save"
                    android:textColor="@color/black" />

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>