<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView style="@style/ResumeApp.Card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/ResumeApp.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/lose_progress_warning"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_working"
                style="@style/ResumeApp.Button"
                android:layout_marginBottom="8dp"
                android:background="@drawable/white_button"
                android:text="@string/continue_working"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/erase_progress"
                style="@style/ResumeApp.Button"
                android:backgroundTint="@color/red"
                android:text="@string/erase_progress" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>